sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (i: Int, j: Int, k: Int, swapped: Boolean)Unit.
Unspecified value parameters i, j, k, ...
		bubbleSort();
                          ^AlgBubbleSort1:16: error: value ++ is not a member of Int
		i++;
                 ^